Fixed banner overflow

--- a/components/banner/banner.module.scss
+++ b/components/banner/banner.module.scss
@@ -19,15 +19,29 @@
 .container {
   background-color: $dark;
   display: block;
+  white-space: nowrap;
   overflow: hidden;
   width: 100%;
   height: 700px;
   padding: 160px 0px;
   z-index: 2;
 
+  @media (max-width: 1600px) { 
+    height: 550px;
+  }
+
+  @media (max-width: 1300px) { 
+    height: 500px;
+  }
+
   @media (max-width: 992px) { 
+    height: 280px;
+    padding: 60px 0px;
+  }
+
+  @media (max-width: 772px) { 
     height: 220px;
-    padding: 30px 0px;
+    padding: 60px 0px;
   }
 }
 
@@ -36,7 +50,7 @@
   display: block;
   margin: auto;
   white-space: nowrap;
-  overflow:  hidden;
+  overflow: hidden;
   min-width: 100%;
   height: 100%;
 }
@@ -45,6 +59,7 @@
   display: inline-block;
   text-align: center;
   white-space: nowrap;
+  overflow: hidden;
   min-width: 100%;
   height: 100%;
 
@@ -52,15 +67,30 @@
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 600;
-  font-size: 300px;
-  line-height: 352px;
+  font-size: 250px;
+  line-height: 300px;
   letter-spacing: 0.04em;
   color: $white;
   -moz-animation: my-animation 12s infinite linear;
   -webkit-animation: my-animation 12s infinite linear;
   animation: my-animation 12s infinite linear;
 
+  @media (max-width: 1600px) { 
+    font-size: 200px;
+    line-height: 250px;
+  }
+
+  @media (max-width: 1300px) { 
+    font-size: 150px;
+    line-height: 200px;
+  }
+
   @media (max-width: 992px) { 
+    font-size: 100px;
+    line-height: 150px;
+  }
+
+  @media (max-width: 772px) { 
     font-size: 64px;
     line-height: 75px;
   }
@@ -69,6 +99,7 @@
 .delay {
   animation-delay: 6s;
   margin-left: 100%;
+  overflow: hidden;
 }
 
 .purple {
